Fix jumping of the ishihara quiz buttons and remove overlapping of test and progressbar result value

--- a/src/stylesheets/components/answers.css
+++ b/src/stylesheets/components/answers.css
@@ -1,5 +1,9 @@
 .answer-form{
 	position : absolute;
-	top: 10%;
+	top: 5%;
 	left: 29%;
+}
+
+#label-id{
+	padding-top: 10%;
 }
